--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
       href="https://fonts.googleapis.com/css2?family=Arvo:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <title>Vite + React</title>
-  </head>
+    <title>Weather + React</title>
+  </head> 
   <body class="bg-gray-200">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
